apply plugin: 'com.android.application'
apply plugin: 'idea'

android {
    compileSdkVersion rootProject.ext.compileSdkVersion
    buildToolsVersion rootProject.ext.buildToolsVersion
    defaultConfig {
        applicationId "org.chromium.chrome"
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion
        versionCode rootProject.ext.versionCode
        versionName rootProject.ext.versionName
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
        multiDexEnabled true
        ndk {
            abiFilters "armeabi-v7a"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    dexOptions {
        javaMaxHeapSize "4g"
    }
    aaptOptions {
        noCompress "dat", "bin", "pak"
    }
    sourceSets {
        main {
            java.filter.exclude(
                    "com/google/protobuf/*.java",
                    "com/google/protobuf/micro/*.java",
                    "com/google/protobuf/nano/*.java",
                    "com/google/protobuf/nano/android/*.java",
                    "org/chromium/chrome/browser/offlinepages/evaluation/*.java"
            )
        }
    }
    lintOptions {
        abortOnError false
        checkReleaseBuilds false
        ignoreWarnings true
        disable 'MissingTranslation'
    }
}

idea {
    module {
        // downloadJavadoc = true
        downloadSources = true
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
    implementation "com.android.support:gridlayout-v7:$rootProject.ext.supportLibraryVersion"
    implementation "com.android.support:mediarouter-v7:$rootProject.ext.supportLibraryVersion"
    implementation "com.android.support:support-v13:$rootProject.ext.supportLibraryVersion"
    implementation "com.google.android.gms:play-services-auth:$rootProject.ext.playServicesVersion"
    implementation "com.google.android.gms:play-services-cast:$rootProject.ext.playServicesVersion"
    implementation "com.google.android.gms:play-services-gcm:$rootProject.ext.playServicesVersion"
    implementation "com.google.android.gms:play-services-identity:$rootProject.ext.playServicesVersion"
    implementation "com.google.android.gms:play-services-nearby:$rootProject.ext.playServicesVersion"
    implementation "com.google.android.gms:play-services-vision:$rootProject.ext.playServicesVersion"
    implementation "com.google.android.gms:play-services-location:$rootProject.ext.playServicesVersion"
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.google.vr:sdk-base:1.130.0'
    implementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
    implementation project(':components:autofill')
    implementation project(':components:web_contents_delegate')
    implementation project(':content')
    implementation project(':data_chart')
    implementation project(':media')
    implementation project(':ui')
    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.runnerVersion"
    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion"
    testImplementation "junit:junit:$rootProject.ext.junitVersion"
}
